--- a/views/new-user.ejs
+++ b/views/new-user.ejs
@@ -17,7 +17,7 @@
       </div>
       <div class="form-control">
         <label for="image">User image</label>
-        ???
+        <input type="file" id="image" name="image" required accept="image/*">
       </div>
       <button class="btn">Save User</button>
     </form>
